<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <TextView
        android:id="@+id/questionTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:layout_marginTop="15dp"
        android:padding="24dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
        tools:text="Sample Question" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <Button
            android:id="@+id/trueButton"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:padding="30dp"
            android:text="@string/true_button"
            />

        <Button
            android:id="@+id/falseButton"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:padding="30dp"
            android:text="@string/false_button" />

    </LinearLayout>
    <TextView
        android:id="@+id/answerTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textColor="@color/colorPrimaryDark"
        tools:text="Answer Goes here"
        />

    <Button
        android:id="@+id/nextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/next"
        android:padding="30dp"
        android:layout_margin="20dp"
        android:textColor="@color/colorPrimaryDark"
        android:visibility="invisible"
        style="?android:attr/borderlessButtonStyle"

        />
    <Button
        android:id="@+id/gameOverButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/game_over"
        android:padding="30dp"
        android:layout_margin="20dp"
        android:textSize="30sp"
        android:textColor="@color/colorAccent"
        android:visibility="invisible"
        style="?android:attr/borderlessButtonStyle"/>

</LinearLayout>